--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -592,32 +592,39 @@ body {
                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
-    // Determine the last known state
-    let lastKnownDate = parseLocalDate(task.date.split(" to ")[0]);
-    let lastKnownTurnIndex = 0;
-    let lastKnownCompletions = {};
+    let currentTurn = null;
+    let nextUser = null;
+    let completedCount = 0;
 
-    // Find the most recent day with completions before the selected date
+    // Get actual completions for the selected date
+    const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+    const completedSet = new Set(completedUsers);
+    completedCount = completedUsers.length;
+
+    // Determine the last known turn
+    let lastTurnUser = task.turn || userOrder[0];
+    let lastTurnDate = parseLocalDate(task.date.split(" to ")[0]);
+
+    // Find the most recent day with completions before selected date
     if (task.completions) {
       const completionDates = Object.keys(task.completions)
         .filter(date => parseLocalDate(date) < selected)
         .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
       if (completionDates.length > 0) {
-        lastKnownDate = parseLocalDate(completionDates[0]);
-        lastKnownCompletions = { [completionDates[0]]: task.completions[completionDates[0]] };
+        lastTurnDate = parseLocalDate(completionDates[0]);
+        const lastCompletions = task.completions[completionDates[0]];
+        if (lastCompletions.length > 0) {
+          lastTurnUser = lastCompletions[lastCompletions.length - 1];
+        }
       }
     }
 
-    // Calculate current and next turn for the selected date
-    let currentTurn = null;
-    let nextUser = null;
-    let completedCount = 0;
-    let completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-    let completedSet = new Set(completedUsers);
+    // Calculate days between last turn date and selected date
+    const daysDiff = Math.floor((selected - lastTurnDate) / (1000 * 60 * 60 * 24));
+    let currentIndex = userOrder.indexOf(lastTurnUser);
 
     if (selected < today) {
       // Past days: Use actual completions
-      completedCount = completedUsers.length;
       for (let i = 0; i < userOrder.length; i++) {
         if (!completedSet.has(userOrder[i])) {
           currentTurn = userOrder[i];
@@ -633,64 +640,39 @@ body {
           }
         }
       }
-    } else {
-      // Present or future days: Predict turns
-      let currentIndex = lastKnownTurnIndex;
-      let tempCompletions = { ...lastKnownCompletions };
-
-      // Simulate turns from last known date to selected date
-      let currentDate = new Date(lastKnownDate);
-      while (currentDate <= selected) {
-        const dateStr = formatDate(currentDate);
-        let dailyCompletions = Array.isArray(tempCompletions[dateStr]) ? tempCompletions[dateStr] : [];
-        let dailyCompletedSet = new Set(dailyCompletions);
-
-        if (currentDate < selected) {
-          // Assume full completions for previous days
-          let completionsNeeded = repeatLimit - dailyCompletions.length;
-          while (completionsNeeded > 0 && userOrder.length > 0) {
-            let user = userOrder[currentIndex % userOrder.length];
-            if (!dailyCompletedSet.has(user)) {
-              dailyCompletions.push(user);
-              dailyCompletedSet.add(user);
-              currentIndex++;
-              completionsNeeded--;
-            } else {
-              currentIndex++;
-            }
+    } else if (selected.getTime() === today.getTime()) {
+      // Active day: Use actual completions
+      for (let i = 0; i < userOrder.length; i++) {
+        if (!completedSet.has(userOrder[(currentIndex + i) % userOrder.length])) {
+          currentTurn = userOrder[(currentIndex + i) % userOrder.length];
+          break;
+        }
+      }
+      if (currentTurn) {
+        const currentIndex = userOrder.indexOf(currentTurn);
+        for (let i = currentIndex + 1; i < userOrder.length; i++) {
+          if (!completedSet.has(userOrder[i])) {
+            nextUser = userOrder[i];
+            break;
           }
-          tempCompletions[dateStr] = dailyCompletions;
-        } else {
-          // For the selected date, use actual completions if available
-          dailyCompletions = Array.isArray(task.completions?.[dateStr]) ? task.completions[dateStr] : [];
-          dailyCompletedSet = new Set(dailyCompletions);
-          completedCount = dailyCompletions.length;
-
-          // Determine current turn
+        }
+        if (!nextUser) {
           for (let i = 0; i < userOrder.length; i++) {
-            let user = userOrder[currentIndex % userOrder.length];
-            if (!dailyCompletedSet.has(user)) {
-              currentTurn = user;
+            if (!completedSet.has(userOrder[i])) {
+              nextUser = userOrder[i];
               break;
-            }
-            currentIndex++;
-          }
-
-          // Determine next user
-          if (currentTurn) {
-            let nextIndex = currentIndex + 1;
-            for (let i = 0; i < userOrder.length; i++) {
-              let user = userOrder[nextIndex % userOrder.length];
-              if (!dailyCompletedSet.has(user)) {
-                nextUser = user;
-                break;
-              }
-              nextIndex++;
             }
           }
         }
-        currentDate.setDate(currentDate.getDate() + 1);
       }
+    } else {
+      // Future days: Predict fixed turns
+      // Simulate repeatLimit completions per day
+      const totalCompletions = daysDiff * repeatLimit;
+      currentIndex = (currentIndex + totalCompletions) % userOrder.length;
+      currentTurn = userOrder[currentIndex];
+      nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+      completedCount = 0; // No actual completions for future dates
     }
 
     currentTurn = currentTurn || "All done!";
@@ -725,8 +707,6 @@ body {
     enableSwipeToDelete(taskDiv);
   });
 }
-
-
 
 
 
