--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -717,27 +717,99 @@ async function showTaskDetails(task) {
   if (!selectedDate) return;
 
   const userOrder = [...task.users];
-
   const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                       task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                       task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
 
+  // Get actual completions for the selected date
   const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
   const completedCount = completedUsers.length;
-
-  // ✅ Safer currentTurn logic
-  const currentIndex = typeof task.currentTurnIndex === "number" ? task.currentTurnIndex : 0;
-  const currentTurn = userOrder[currentIndex];
-  let nextUser = currentTurn;
-
   const completedSet = new Set(completedUsers);
-  for (let i = 1; i <= userOrder.length; i++) {
-    const index = (currentIndex + i) % userOrder.length;
-    if (!completedSet.has(userOrder[index])) {
-      nextUser = userOrder[index];
-      break;
+
+  // Determine the last known turn
+  let lastTurnUser = task.turn || userOrder[0];
+  let lastTurnDate = task.date.split(" to ")[0];
+
+  // Find the most recent day with completions before selected date
+  if (task.completions) {
+    const completionDates = Object.keys(task.completions)
+      .filter(date => new Date(date) < new Date(selectedDate))
+      .sort((a, b) => new Date(b) - new Date(a));
+    if (completionDates.length > 0) {
+      lastTurnDate = completionDates[0];
+      const lastCompletions = task.completions[completionDates[0]];
+      if (lastCompletions.length > 0) {
+        lastTurnUser = lastCompletions[lastCompletions.length - 1];
+      }
     }
   }
+
+  let currentTurn = null;
+  let nextUser = null;
+
+  function parseLocalDate(dateStr) {
+    const [year, month, day] = dateStr.split("-").map(Number);
+    return new Date(year, month - 1, day);
+  }
+
+  const selected = parseLocalDate(selectedDate);
+  const today = new Date();
+  today.setHours(0, 0, 0, 0);
+  let currentIndex = userOrder.indexOf(lastTurnUser);
+
+  if (selected < today) {
+    // Past days: Use actual completions
+    for (let i = 0; i < userOrder.length; i++) {
+      if (!completedSet.has(userOrder[i])) {
+        currentTurn = userOrder[i];
+        break;
+      }
+    }
+    if (currentTurn) {
+      const currentIndex = userOrder.indexOf(currentTurn);
+      for (let i = currentIndex + 1; i < userOrder.length; i++) {
+        if (!completedSet.has(userOrder[i])) {
+          nextUser = userOrder[i];
+          break;
+        }
+      }
+    }
+  } else if (selected.getTime() === today.getTime()) {
+    // Active day: Use actual completions
+    for (let i = 0; i < userOrder.length; i++) {
+      if (!completedSet.has(userOrder[(currentIndex + i) % userOrder.length])) {
+        currentTurn = userOrder[(currentIndex + i) % userOrder.length];
+        break;
+      }
+    }
+    if (currentTurn) {
+      const currentIndex = userOrder.indexOf(currentTurn);
+      for (let i = currentIndex + 1; i < userOrder.length; i++) {
+        if (!completedSet.has(userOrder[i])) {
+          nextUser = userOrder[i];
+          break;
+        }
+      }
+      if (!nextUser) {
+        for (let i = 0; i < userOrder.length; i++) {
+          if (!completedSet.has(userOrder[i])) {
+            nextUser = userOrder[i];
+            break;
+          }
+        }
+      }
+    }
+  } else {
+    // Future days: Predict fixed turns
+    const daysDiff = Math.floor((selected - parseLocalDate(lastTurnDate)) / (1000 * 60 * 60 * 24));
+    const totalCompletions = daysDiff * repeatLimit;
+    currentIndex = (currentIndex + totalCompletions) % userOrder.length;
+    currentTurn = userOrder[currentIndex];
+    nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+  }
+
+  currentTurn = currentTurn || "All done!";
+  nextUser = nextUser || "—";
 
   let taskDetails = `
     <strong>Title:</strong> ${task.title}<br>
@@ -800,8 +872,6 @@ async function showTaskDetails(task) {
     });
   }
 }
-
-
 
 
 
