--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -1301,83 +1301,94 @@ async function finishTask(userName, task, button, selectedDate) {
 
 
 
-
-
-
         function enableSwipeToDelete(taskElement) {
-    let startX = 0;
-    let currentX = 0;
-    let isSwiping = false;
-    let startTime = 0;
+  let startX = 0;
+  let currentX = 0;
+  let isSwiping = false;
+  let startTime = 0;
+  let isTap = true;
 
-    const threshold = 100; // Increased threshold for swipe detection
-    const minSwipeDuration = 200; // Minimum duration in milliseconds
-    const deadZone = 10; // Ignore movements smaller than this (pixels)
+  const threshold = 100; // Pixels needed to confirm a swipe
+  const minSwipeDuration = 200; // Minimum duration in milliseconds
+  const tapThreshold = 10; // Max movement for a tap (pixels)
+  const maxTapDuration = 500; // Max duration for a tap (milliseconds)
 
-    const onStart = (x) => {
-        startX = x;
-        startTime = Date.now();
-        isSwiping = true;
-        taskElement.style.transition = 'none';
-    };
+  const onStart = (x, e) => {
+    startX = x;
+    startTime = Date.now();
+    isSwiping = true;
+    isTap = true;
+    taskElement.style.transition = 'none';
+  };
 
-    const onMove = (x) => {
-        if (!isSwiping) return;
-        currentX = x;
-        const deltaX = currentX - startX;
-        const absDeltaX = Math.abs(deltaX);
+  const onMove = (x, e) => {
+    if (!isSwiping) return;
+    currentX = x;
+    const deltaX = currentX - startX;
+    const absDeltaX = Math.abs(deltaX);
 
-        // Ignore small movements within the dead zone
-        if (absDeltaX < deadZone) {
-            taskElement.style.transform = 'translateX(0)';
-            return;
-        }
+    // If movement exceeds tap threshold, it’s a swipe, not a tap
+    if (absDeltaX > tapThreshold) {
+      isTap = false;
+      e.preventDefault(); // Prevent scrolling only for swipes
+    }
 
-        if (deltaX < 0) {
-            taskElement.style.transform = `translateX(${deltaX}px)`;
-        }
-    };
+    if (deltaX < 0) {
+      taskElement.style.transform = `translateX(${deltaX}px)`;
+    }
+  };
 
-    const onEnd = () => {
-        if (!isSwiping) return;
-        isSwiping = false;
-        const deltaX = currentX - startX;
-        const swipeDuration = Date.now() - startTime;
-        taskElement.style.transition = 'transform 0.3s ease';
+  const onEnd = (e) => {
+    if (!isSwiping) return;
+    isSwiping = false;
+    const deltaX = currentX - startX;
+    const swipeDuration = Date.now() - startTime;
+    taskElement.style.transition = 'transform 0.3s ease';
 
-        // Only trigger swipe if threshold is met and duration is sufficient
-        if (deltaX < -threshold && swipeDuration >= minSwipeDuration) {
-            taskElement.classList.add('swiped-left');
-            taskElement.style.transform = 'translateX(-100px)';
-        } else {
-            taskElement.classList.remove('swiped-left');
-            taskElement.style.transform = 'translateX(0)';
-        }
-    };
+    // Handle swipe to delete
+    if (deltaX < -threshold && swipeDuration >= minSwipeDuration && !isTap) {
+      taskElement.classList.add('swiped-left');
+      taskElement.style.transform = 'translateX(-100px)';
+    } else {
+      taskElement.classList.remove('swiped-left');
+      taskElement.style.transform = 'translateX(0)';
+    }
 
-    // Touch events
-    taskElement.addEventListener('touchstart', e => {
-        e.preventDefault(); // Prevent scrolling while swiping
-        onStart(e.touches[0].clientX);
-    });
-    taskElement.addEventListener('touchmove', e => onMove(e.touches[0].clientX));
-    taskElement.addEventListener('touchend', onEnd);
+    // Allow tap to proceed if it’s a tap
+    if (isTap && swipeDuration < maxTapDuration) {
+      // Don’t prevent default; let the click event fire naturally
+    }
+  };
 
-    // Mouse events
-    taskElement.addEventListener('mousedown', e => {
-        e.preventDefault(); // Prevent text selection
-        onStart(e.clientX);
-    });
-    taskElement.addEventListener('mousemove', e => {
-        if (e.buttons === 1) onMove(e.clientX);
-    });
-    taskElement.addEventListener('mouseup', onEnd);
+  // Touch events
+  taskElement.addEventListener('touchstart', (e) => {
+    onStart(e.touches[0].clientX, e);
+  });
+  taskElement.addEventListener('touchmove', (e) => {
+    onMove(e.touches[0].clientX, e);
+  });
+  taskElement.addEventListener('touchend', (e) => {
+    onEnd(e);
+  });
 
-    // Reset swipe if clicking elsewhere
-    taskElement.addEventListener('mouseleave', () => {
-        if (isSwiping) onEnd();
-    });
+  // Mouse events (unchanged, as they work fine on computer)
+  taskElement.addEventListener('mousedown', (e) => {
+    e.preventDefault(); // Prevent text selection
+    onStart(e.clientX, e);
+  });
+  taskElement.addEventListener('mousemove', (e) => {
+    if (e.buttons === 1) onMove(e.clientX, e);
+  });
+  taskElement.addEventListener('mouseup', (e) => {
+    onEnd(e);
+  });
+
+  // Reset swipe if mouse leaves
+  taskElement.addEventListener('mouseleave', () => {
+    if (isSwiping) onEnd();
+  });
 }
+
 
 
 
