--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -546,172 +546,188 @@ body {
 
         // Load tasks for a specific date
 
-
-
         async function loadTasksForDate(selectedDate) {
-  const adminEmail = localStorage.getItem("currentAdminEmail");
-  if (!adminEmail) return;
-
-  const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-  const result = await response.json();
-  const tasks = result.tasks || [];
-
-  const taskList = document.getElementById("taskList");
-  taskList.innerHTML = "";
-
-  function parseLocalDate(dateStr) {
-    const [year, month, day] = dateStr.split("-").map(Number);
-    return new Date(year, month - 1, day);
-  }
-
-  const selected = parseLocalDate(selectedDate);
-  const today = new Date();
-  today.setHours(0, 0, 0, 0);
-
-  const visibleTasks = tasks.filter(task => {
-    if (!task.date) return false;
-    const range = task.date.split(" to ");
-    const from = parseLocalDate(range[0]);
-    const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-    return selected >= from && selected <= to;
-  });
-
-  if (visibleTasks.length === 0) {
-    taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
-    return;
-  }
-
-  visibleTasks.forEach((task) => {
-    const taskDiv = document.createElement("div");
-    taskDiv.className = "task-item";
-    taskDiv.dataset.taskTitle = task.title;
-    taskDiv.dataset.taskDate = task.date;
-
-    const userOrder = [...task.users];
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
-
-    let currentTurn = null;
-    let nextUser = null;
-    let completedCount = 0;
-
-    // Get actual completions for the selected date
-    const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-    const completedSet = new Set(completedUsers);
-    completedCount = completedUsers.length;
-
-    // Determine the last known turn
-    let lastTurnUser = task.turn || userOrder[0];
-    let lastTurnDate = parseLocalDate(task.date.split(" to ")[0]);
-
-    // Find the most recent day with completions before selected date
-    if (task.completions) {
-      const completionDates = Object.keys(task.completions)
-        .filter(date => parseLocalDate(date) < selected)
-        .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
-      if (completionDates.length > 0) {
-        lastTurnDate = parseLocalDate(completionDates[0]);
-        const lastCompletions = task.completions[completionDates[0]];
-        if (lastCompletions.length > 0) {
-          lastTurnUser = lastCompletions[lastCompletions.length - 1];
-        }
-      }
+  try {
+    const adminEmail = localStorage.getItem("currentAdminEmail");
+    if (!adminEmail) {
+      console.warn("No admin email found");
+      return;
     }
 
-    // Calculate days between last turn date and selected date
-    const daysDiff = Math.floor((selected - lastTurnDate) / (1000 * 60 * 60 * 24));
-    let currentIndex = userOrder.indexOf(lastTurnUser);
+    const taskList = document.getElementById("taskList");
+    if (!taskList) {
+      console.error("Task list element not found");
+      return;
+    }
+    taskList.innerHTML = "";
 
-    if (selected < today) {
-      // Past days: Use actual completions
-      for (let i = 0; i < userOrder.length; i++) {
-        if (!completedSet.has(userOrder[i])) {
-          currentTurn = userOrder[i];
-          break;
-        }
-      }
-      if (currentTurn) {
-        const currentIndex = userOrder.indexOf(currentTurn);
-        for (let i = currentIndex + 1; i < userOrder.length; i++) {
-          if (!completedSet.has(userOrder[i])) {
-            nextUser = userOrder[i];
-            break;
+    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+    if (!response.ok) {
+      throw new Error(`Failed to fetch tasks: ${response.statusText}`);
+    }
+    const result = await response.json();
+    const tasks = Array.isArray(result.tasks) ? result.tasks : [];
+
+    function parseLocalDate(dateStr) {
+      if (!dateStr || typeof dateStr !== 'string') return new Date(3000, 0, 1);
+      const [year, month, day] = dateStr.split("-").map(Number);
+      return new Date(year, month - 1, day);
+    }
+
+    const selected = parseLocalDate(selectedDate);
+    const today = new Date();
+    today.setHours(0, 0, 0, 0);
+
+    const visibleTasks = tasks.filter(task => {
+      if (!task.date) return false;
+      const range = task.date.split(" to ");
+      const from = parseLocalDate(range[0]);
+      const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+      return selected >= from && selected <= to;
+    });
+
+    if (visibleTasks.length === 0) {
+      taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+      return;
+    }
+
+    visibleTasks.forEach((task) => {
+      const taskDiv = document.createElement("div");
+      taskDiv.className = "task-item";
+      taskDiv.dataset.taskTitle = task.title || "";
+      taskDiv.dataset.taskDate = task.date || "";
+
+      const userOrder = Array.isArray(task.users) ? [...task.users] : [];
+      const repeatLimit = task.repeat === "Daily" ? (task.timesPerDay || 1) :
+                          task.repeat === "Weekly" ? (task.timesPerWeek || 1) :
+                          task.repeat === "Monthly" ? (task.timesPerMonth || 1) : 1;
+
+      let currentTurn = null;
+      let nextUser = null;
+      let completedCount = 0;
+
+      const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+      const completedSet = new Set(completedUsers);
+      completedCount = completedUsers.length;
+
+      let lastTurnUser = task.turn || (userOrder[0] || "");
+      let lastTurnDate = parseLocalDate(task.date?.split(" to ")[0]);
+
+      if (task.completions && typeof task.completions === 'object') {
+        const completionDates = Object.keys(task.completions)
+          .filter(date => parseLocalDate(date) < selected)
+          .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
+        if (completionDates.length > 0) {
+          lastTurnDate = parseLocalDate(completionDates[0]);
+          const lastCompletions = Array.isArray(task.completions[completionDates[0]]) ? task.completions[completionDates[0]] : [];
+          if (lastCompletions.length > 0) {
+            lastTurnUser = lastCompletions[lastCompletions.length - 1];
           }
         }
       }
-    } else if (selected.getTime() === today.getTime()) {
-      // Active day: Use actual completions with predicted sequence
-      // Find current turn by skipping completed users
-      for (let i = 0; i < userOrder.length; i++) {
-        if (!completedSet.has(userOrder[(currentIndex + i) % userOrder.length])) {
-          currentTurn = userOrder[(currentIndex + i) % userOrder.length];
-          currentIndex = (currentIndex + i) % userOrder.length;
-          break;
+
+      let currentIndex = userOrder.indexOf(lastTurnUser);
+      if (currentIndex === -1) currentIndex = 0;
+
+      if (selected < today) {
+        for (let i = 0; i < userOrder.length; i++) {
+          if (!completedSet.has(userOrder[i])) {
+            currentTurn = userOrder[i];
+            break;
+          }
         }
-      }
-      if (currentTurn) {
-        // Simulate the remaining completions for the day
-        let tempIndex = currentIndex;
+        if (currentTurn) {
+          const currIdx = userOrder.indexOf(currentTurn);
+          for (let i = currIdx + 1; i < userOrder.length; i++) {
+            if (!completedSet.has(userOrder[i])) {
+              nextUser = userOrder[i];
+              break;
+            }
+          }
+        }
+      } else if (selected.getTime() === today.getTime()) {
+        let completionIndex = currentIndex;
         let tempCompletions = [...completedUsers];
         let tempCompletedSet = new Set(tempCompletions);
-        // Complete up to repeatLimit
-        while (tempCompletions.length < repeatLimit && userOrder.length > 0) {
-          tempIndex++;
-          let user = userOrder[tempIndex % userOrder.length];
+
+        for (let i = 0; i < userOrder.length && tempCompletions.length < repeatLimit; i++) {
+          const user = userOrder[(completionIndex + i) % userOrder.length];
           if (!tempCompletedSet.has(user)) {
             tempCompletions.push(user);
             tempCompletedSet.add(user);
           }
         }
-        // Next user is the one after the current turn in the simulated sequence
-        if (tempCompletions.length > completedCount) {
-          nextUser = tempCompletions[completedCount];
-        } else {
-          // If no more completions, cycle back
-          nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+
+        currentTurn = tempCompletions[completedCount] || userOrder[completionIndex % userOrder.length];
+        if (!currentTurn || completedSet.has(currentTurn)) {
+          for (let i = 1; i <= userOrder.length; i++) {
+            const nextCandidate = userOrder[(completionIndex + i) % userOrder.length];
+            if (!completedSet.has(nextCandidate)) {
+              currentTurn = nextCandidate;
+              break;
+            }
+          }
         }
+
+        if (currentTurn && completedCount < repeatLimit) {
+          nextUser = tempCompletions[completedCount + 1] || userOrder[(userOrder.indexOf(currentTurn) + 1) % userOrder.length];
+        }
+      } else {
+        const daysDiff = Math.floor((selected - lastTurnDate) / (1000 * 60 * 60 * 24));
+        const totalCompletions = daysDiff * repeatLimit;
+        currentIndex = (currentIndex + totalCompletions) % userOrder.length;
+        currentTurn = userOrder[currentIndex];
+        nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+        completedCount = 0;
       }
-    } else {
-      // Future days: Predict fixed turns
-      const totalCompletions = daysDiff * repeatLimit;
-      currentIndex = (currentIndex + totalCompletions) % userOrder.length;
-      currentTurn = userOrder[currentIndex];
-      nextUser = userOrder[(currentIndex + 1) % userOrder.length];
-      completedCount = 0; // No actual completions for future dates
+
+      currentTurn = currentTurn || "All done!";
+      nextUser = nextUser || "—";
+      const isCompleted = completedCount >= repeatLimit;
+
+      taskDiv.innerHTML = `
+        <strong>${task.title || "Untitled"}</strong><br>
+        Turn: ${currentTurn}<br>
+        Next: ${nextUser}<br>
+        Completed: ${completedCount}/${repeatLimit}<br>
+        ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
+        <button class="delete-btn">Delete</button>
+      `;
+
+      taskDiv.addEventListener("click", async (e) => {
+        if (!e.target.classList.contains("delete-btn")) {
+          try {
+            const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
+            const latestResult = await latest.json();
+            const latestTask = latestResult.tasks?.find(t => t.title === task.title && t.date === task.date);
+            if (latestTask) showTaskDetails(latestTask);
+          } catch (err) {
+            console.error("Error fetching latest task:", err);
+          }
+        }
+      });
+
+      taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+        if (confirm("Are you sure you want to delete this task?")) {
+          try {
+            await deleteTaskFromBackend(task.title, task.date);
+            loadTasksForDate(selectedDate);
+          } catch (err) {
+            console.error("Error deleting task:", err);
+          }
+        }
+      });
+
+      taskList.appendChild(taskDiv);
+      enableSwipeToDelete(taskDiv);
+    });
+  } catch (error) {
+    console.error("Error in loadTasksForDate:", error);
+    const taskList = document.getElementById("taskList");
+    if (taskList) {
+      taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks. Please try again.</div>`;
     }
-
-    currentTurn = currentTurn || "All done!";
-    nextUser = nextUser || "—";
-    const isCompleted = completedCount >= repeatLimit;
-
-    taskDiv.innerHTML = `
-      <strong>${task.title}</strong><br>
-      Turn: ${currentTurn}<br>
-      Next: ${nextUser}<br>
-      Completed: ${completedCount}/${repeatLimit}<br>
-      ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
-      <button class="delete-btn">Delete</button>
-    `;
-
-    taskDiv.addEventListener("click", async (e) => {
-      if (!e.target.classList.contains("delete-btn")) {
-        const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-        const latestTask = (await latest.json()).tasks.find(t => t.title === task.title && t.date === task.date);
-        if (latestTask) showTaskDetails(latestTask);
-      }
-    });
-
-    taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-      if (confirm("Are you sure you want to delete this task?")) {
-        await deleteTaskFromBackend(task.title, task.date);
-        loadTasksForDate(selectedDate);
-      }
-    });
-
-    taskList.appendChild(taskDiv);
-    enableSwipeToDelete(taskDiv);
-  });
+  }
 }
 
 
