--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -904,7 +904,8 @@ async function finishTask(userName, task, button, selectedDate) {
                 adminEmail,
                 taskTitle: task.title,
                 user: userName,
-                date: todayStr
+                date: todayStr,
+                pending: true 
             })
         });
 
