--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -140,32 +140,26 @@
 
 
 
-        async function handleDecision(title, userName, decision) {
+
+        async function handleDecision(title, date, user, decision) {
   const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
   const { tasks } = await res.json();
-  const today = new Date().toISOString().split("T")[0];
-  const task = tasks.find(t => t.title === title && t.completions?.[today]);
-
+  const task = tasks.find(t => t.title === title && t.date === date);
   if (!task) return;
 
-  const completions = task.completions[today];
-  const index = completions.findIndex(c => c.user === userName && c.status === "pending");
-  if (index === -1) return;
+  if (!task.completions) task.completions = {};
+  const completions = task.completions[date] || [];
 
   if (decision === "accept") {
-    completions[index].status = "approved";
-
-    await fetch("https://beemazing.onrender.com/api/rewards", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ adminEmail, user: userName, amount: Number(task.reward) || 0 })
-    });
-
+    // Find the pending entry and mark as accepted
+    const idx = completions.findIndex(c => typeof c === "object" && c.user === user && c.pending);
+    if (idx !== -1) {
+      completions[idx] = user; // Replace with just user string (accepted)
+    }
   } else if (decision === "decline") {
-    completions.splice(index, 1); // Remove so user can redo the task
+    // Remove the pending entry
+    task.completions[date] = completions.filter(c => !(typeof c === "object" && c.user === user && c.pending));
   }
-
-  task.completions[today] = completions;
 
   await fetch("https://beemazing.onrender.com/update-task", {
     method: "POST",
@@ -176,33 +170,28 @@
   loadTasks();
 }
 
-
-
-
-
-
-
-     
-
 async function loadTasks() {
-    const res = await fetch(`https://beemazing.onrender.com/api/admin-tasks?adminEmail=${encodeURIComponent(adminEmail)}&date=${selectedDate}`);
-
+  const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
   const { tasks } = await res.json();
   const container = document.getElementById("taskContainer");
   container.innerHTML = "";
 
   tasks.forEach(task => {
-    if (task.status === "Pending") {
+    const completions = task.completions?.[selectedDate] || [];
+    const pendingCompletions = completions.filter(c => typeof c === "object" && c.pending);
+
+    pendingCompletions.forEach((entry, index) => {
+      const user = entry.user;
       const div = document.createElement("div");
       div.className = "task-entry";
       div.innerHTML = `
-        <p><strong>${task.title}</strong> - ${task.user}</p>
-        <p>Status: Awaiting Approval</p>
-        <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.user}', 'accept')">Accept</button>
-        <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.user}', 'decline')">Decline</button>
+        <p><strong>${task.title}</strong> - ${user}</p>
+        <p>Status: Needs Review</p>
+        <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', '${user}', 'accept')">Accept</button>
+        <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', '${user}', 'decline')">Decline</button>
       `;
       container.appendChild(div);
-    }
+    });
   });
 }
 
@@ -210,7 +199,14 @@ async function loadTasks() {
 
 
 
-      
+
+
+
+
+
+
+
+
         function generateScrollableDates(monthOffset = 0) {
           const container = document.getElementById("dayScrollContainer");
           container.innerHTML = "";
