--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -904,8 +904,7 @@ async function finishTask(userName, task, button, selectedDate) {
                 adminEmail,
                 taskTitle: task.title,
                 user: userName,
-                date: todayStr,
-                pending: true 
+                date: todayStr
             })
         });
 
